--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <style type="text/css">
 body {font-family:Helvetica, Arial;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced,}
-h2 {color:#000;margin:0;}
+h2 {color:#000;margin:8px;}
 h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;font-size:2em;}
 img {margin:20px;}
 a {text-decoration:none;}
