--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <style type="text/css">
 body {font-family:Helvetica, Arial;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;}
-h2 {color:#000;margin:0;padding-bottom:1em;font-size:2em;}
+h2 {color:#000;margin:8px;padding-bottom:1em;font-size:2em;}
 h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;font-size:2em;}
 p {color:#000;margin:0;font-family:Monospaced;text-align: justify;font-size:1.5em;}
 a {text-decoration:none;}
