--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 <head>
 <title>About public svg</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="viewport" content="width\=device-width, initial-scale=1">
-<meta name="author" content="Public Domain">
-<meta name="description" content="Free public domain svg software">
-<meta name="keywords" content="license, about, software, image, icon, icons, public, domain, svg, free, gratis, dominio, publico, scalable, vector, graphics">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+<meta name="author" content="Public Domain"/>
+<meta name="description" content="Public domain svg software"/>
+<meta name="keywords" content="license, about, software, image, icon, icons, public, domain, svg, free, gratis, dominio, publico, scalable, vector, graphics"/>
 <style type="text/css">
 body {font-family:Helvetica, Arial;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;}
