--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
 <title>Public svg</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
 <meta name="google" value="notranslate"/>
-<meta name="author" content="Public Domain">
-<meta name="description" content="Public domain svg software">
+<meta name="author" content="Public Domain"/>
+<meta name="description" content="Public domain svg software"/>
 <meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor">
 <style type="text/css">
 body {font-family:Helvetica, Arial;text-align:center;}
