--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta name="google" value="notranslate"/>
 <meta name="author" content="Public Domain"/>
 <meta name="description" content="Public domain svg software"/>
-<meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor">
+<meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor"/>
 <style type="text/css">
 body {font-family:Helvetica, Arial;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced,}
