--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@ a {text-decoration:none;}
 <a href="Icon/aac.svg" download><img src="Icon/aac.svg"/></a>
 <a href="Icon/aab.svg" download><img src="Icon/aab.svg"/></a>
 <a href="Icon/aaa.svg" download><img src="Icon/aaa.svg"/></a>
-<!-- <a href="p_one.html"><h3>| Next Page |</h3></a> -->
+<a href="p_one.html"><h3>| Next Page |</h3></a>
 </body>
 </html>
