--- a/p_one.html
+++ b/p_one.html
@@ -20,7 +20,7 @@ a {text-decoration:none;}
 <body>
 <a href="index.html"><h1>Public Domain Scalable Vector Graphics</h1></a>
 <h2>Click to Download</h2>
-<a href="Icon/aba.svg" download><img src="aba.svg"/></a>
+<a href="Icon/aba.svg" download><img src="Icon/aba.svg"/></a>
 
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
