--- a/about.html
+++ b/about.html
@@ -21,6 +21,7 @@ a {text-decoration:none;}
 <h2>- About -</h2>
 <a href="https://creativecommons.org/publicdomain/zero/1.0/">Creative Commons Zero 1.0 License</a>
 <p>Public svg contains free public domain scalable vector graphics. Feel free to download any image/software that you want, just click to download. You can copy, modify, distribute and perform the work, even for commercial purposes, all without asking permission. You may use this software for any purpose like a website, app, or your own software. This software is provided as is, without warranty of any kind. In no event shall the authors or creators be liable for any claim, due to damages or other liability, arising from, out of, or in connection with the software.</p>
+<p>All files are in svg format, and are created using a text editor.</p>
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
 </html>
