--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <title>Public svg</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-<meta name="google" value="notranslate"/>
 <meta name="author" content="Public Domain"/>
 <meta name="description" content="Public domain svg software"/>
 <meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor"/>
