--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="author" content="Public Domain"/>
-<meta name="description" content="Public domain svg software"/>
+<meta name="description" content="public domain svg software"/>
 <meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor"/>
 <style>
 body {font-family:Helvetica, Arial;text-align:center;}
@@ -20,32 +20,32 @@ a {text-decoration:none;}
 <h1>Public Domain Scalable Vector Graphics</h1>
 <a href="about.html"><h2>| About |</h2></a>
 <h2>Click to Download</h2>
-<a href="Icon/aaz.svg" download><img src="Icon/aaz.svg"/></a>
-<a href="Icon/aay.svg" download><img src="Icon/aay.svg"/></a>
-<a href="Icon/aax.svg" download><img src="Icon/aax.svg"/></a>
-<a href="Icon/aaw.svg" download><img src="Icon/aaw.svg"/></a>
-<a href="Icon/aav.svg" download><img src="Icon/aav.svg"/></a>
-<a href="Icon/aau.svg" download><img src="Icon/aau.svg"/></a>
-<a href="Icon/aat.svg" download><img src="Icon/aat.svg"/></a>
-<a href="Icon/aas.svg" download><img src="Icon/aas.svg"/></a>
-<a href="Icon/aar.svg" download><img src="Icon/aar.svg"/></a>
-<a href="Icon/aaq.svg" download><img src="Icon/aaq.svg"/></a>
-<a href="Icon/aap.svg" download><img src="Icon/aap.svg"/></a>
-<a href="Icon/aao.svg" download><img src="Icon/aao.svg"/></a>
-<a href="Icon/aan.svg" download><img src="Icon/aan.svg"/></a>
-<a href="Icon/aam.svg" download><img src="Icon/aam.svg"/></a>
-<a href="Icon/aal.svg" download><img src="Icon/aal.svg"/></a>
-<a href="Icon/aak.svg" download><img src="Icon/aak.svg"/></a>
-<a href="Icon/aaj.svg" download><img src="Icon/aaj.svg"/></a>
-<a href="Icon/aai.svg" download><img src="Icon/aai.svg"/></a>
-<a href="Icon/aah.svg" download><img src="Icon/aah.svg"/></a>
-<a href="Icon/aag.svg" download><img src="Icon/aag.svg"/></a>
-<a href="Icon/aaf.svg" download><img src="Icon/aaf.svg"/></a>
-<a href="Icon/aae.svg" download><img src="Icon/aae.svg"/></a>
-<a href="Icon/aad.svg" download><img src="Icon/aad.svg"/></a>
-<a href="Icon/aac.svg" download><img src="Icon/aac.svg"/></a>
-<a href="Icon/aab.svg" download><img src="Icon/aab.svg"/></a>
-<a href="Icon/aaa.svg" download><img src="Icon/aaa.svg"/></a>
+<a href="Icon/aaz.svg" download><img src="Icon/aaz.svg" alt="download"/></a>
+<a href="Icon/aay.svg" download><img src="Icon/aay.svg" alt="download"/></a>
+<a href="Icon/aax.svg" download><img src="Icon/aax.svg" alt="download"/></a>
+<a href="Icon/aaw.svg" download><img src="Icon/aaw.svg" alt="download"/></a>
+<a href="Icon/aav.svg" download><img src="Icon/aav.svg" alt="download"/></a>
+<a href="Icon/aau.svg" download><img src="Icon/aau.svg" alt="download"/></a>
+<a href="Icon/aat.svg" download><img src="Icon/aat.svg" alt="download"/></a>
+<a href="Icon/aas.svg" download><img src="Icon/aas.svg" alt="download"/></a>
+<a href="Icon/aar.svg" download><img src="Icon/aar.svg" alt="download"/></a>
+<a href="Icon/aaq.svg" download><img src="Icon/aaq.svg" alt="download"/></a>
+<a href="Icon/aap.svg" download><img src="Icon/aap.svg" alt="download"/></a>
+<a href="Icon/aao.svg" download><img src="Icon/aao.svg" alt="download"/></a>
+<a href="Icon/aan.svg" download><img src="Icon/aan.svg" alt="download"/></a>
+<a href="Icon/aam.svg" download><img src="Icon/aam.svg" alt="download"/></a>
+<a href="Icon/aal.svg" download><img src="Icon/aal.svg" alt="download"/></a>
+<a href="Icon/aak.svg" download><img src="Icon/aak.svg" alt="download"/></a>
+<a href="Icon/aaj.svg" download><img src="Icon/aaj.svg" alt="download"/></a>
+<a href="Icon/aai.svg" download><img src="Icon/aai.svg" alt="download"/></a>
+<a href="Icon/aah.svg" download><img src="Icon/aah.svg" alt="download"/></a>
+<a href="Icon/aag.svg" download><img src="Icon/aag.svg" alt="download"/></a>
+<a href="Icon/aaf.svg" download><img src="Icon/aaf.svg" alt="download"/></a>
+<a href="Icon/aae.svg" download><img src="Icon/aae.svg" alt="download"/></a>
+<a href="Icon/aad.svg" download><img src="Icon/aad.svg" alt="download"/></a>
+<a href="Icon/aac.svg" download><img src="Icon/aac.svg" alt="download"/></a>
+<a href="Icon/aab.svg" download><img src="Icon/aab.svg" alt="download"/></a>
+<a href="Icon/aaa.svg" download><img src="Icon/aaa.svg" alt="download"/></a>
 <a href="p_one.html"><h3>| Next Page |</h3></a>
 </body>
 </html>
