--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <title>About public svg</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
-<meta name="author" content="Public Domain"/>
-<meta name="description" content="Public domain svg software"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="author" content="public domain"/>
+<meta name="description" content="public domain svg software"/>
 <meta name="keywords" content="license, about, software, image, icon, icons, public, domain, svg, free, gratis, dominio, publico, scalable, vector, graphics"/>
-<style type="text/css">
+<style>
 body {font-family:Helvetica, Arial;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;}
 h2 {color:#000;margin:8px;padding-bottom:1em;font-size:2em;}
@@ -25,4 +25,3 @@ a {text-decoration:none;}
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
 </html>
-
