--- a/p_one.html
+++ b/p_one.html
@@ -20,12 +20,12 @@ a {text-decoration:none;}
 <a href="index.html"><h1>Public Domain Scalable Vector Graphics</h1></a>
 <h2>Click to Download</h2>
 <a href="Icon/aba.svg" download><img src="Icon/aba.svg" alt="download"/></a>
-<a href="Icon/aas.svg" download><img src="Icon/aas.svg" alt="download"/></a>
-<a href="Icon/aar.svg" download><img src="Icon/aar.svg" alt="download"/></a>
-<a href="Icon/aac.svg" download><img src="Icon/aac.svg" alt="download"/></a>
-<a href="Icon/aai.svg" download><img src="Icon/aai.svg" alt="download"/></a>
-<a href="Icon/aab.svg" download><img src="Icon/aab.svg" alt="download"/></a>
-<a href="Icon/aaa.svg" download><img src="Icon/aaa.svg" alt="download"/></a>
+<a href="Icon/aas.svg" download><img src="Icon/aas.svg" alt=""/></a>
+<a href="Icon/aar.svg" download><img src="Icon/aar.svg" alt=""/></a>
+<a href="Icon/aac.svg" download><img src="Icon/aac.svg" alt=""/></a>
+<a href="Icon/aai.svg" download><img src="Icon/aai.svg" alt=""/></a>
+<a href="Icon/aab.svg" download><img src="Icon/aab.svg" alt=""/></a>
+<a href="Icon/aaa.svg" download><img src="Icon/aaa.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
