--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@ a {text-decoration:none;}
 <a href="Icon/abd.svg" download><img src="Icon/abd.svg" alt=""/></a>
 <a href="Icon/abf.svg" download><img src="Icon/abf.svg" alt=""/></a>
 <a href="p_one.html"><h3>| Next Page |</h3></a>
+<a href="p_color.html"><h3>| Color Reference |</h3></a>
 </body>
 </html>
