--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="author" content="Public Domain"/>
 <meta name="description" content="public domain svg software"/>
-<meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor"/>
+<meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor, hexadecimal, color, reference, github"/>
 <style>
 body {font-family:Helvetica, Arial;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;}
@@ -28,7 +28,6 @@ a {text-decoration:none;}
 <a href="Icon/aau.svg" download><img src="Icon/aau.svg" alt=""/></a>
 <a href="Icon/aat.svg" download><img src="Icon/aat.svg" alt=""/></a>
 <a href="Icon/aas.svg" download><img src="Icon/aas.svg" alt=""/></a>
-<a href="Icon/aar.svg" download><img src="Icon/aar.svg" alt=""/></a>
 <a href="Icon/abg.svg" download><img src="Icon/abg.svg" alt=""/></a>
 <a href="Icon/abe.svg" download><img src="Icon/abe.svg" alt=""/></a>
 <a href="Icon/aao.svg" download><img src="Icon/aao.svg" alt=""/></a>
@@ -46,6 +45,7 @@ a {text-decoration:none;}
 <a href="Icon/abb.svg" download><img src="Icon/abb.svg" alt=""/></a>
 <a href="Icon/abd.svg" download><img src="Icon/abd.svg" alt=""/></a>
 <a href="Icon/abf.svg" download><img src="Icon/abf.svg" alt=""/></a>
+<a href="Icon/abh.svg" download><img src="Icon/abh.svg" alt=""/></a>
 <a href="p_one.html"><h3>| Next Page |</h3></a>
 <a href="p_color.html"><h3>| Color Reference |</h3></a>
 </body>
