--- a/p_one.html
+++ b/p_one.html
@@ -23,6 +23,7 @@ a {text-decoration:none;}
 <a href="Icon/aas.svg" download><img src="Icon/aas.svg" alt=""/></a>
 <a href="Icon/aar.svg" download><img src="Icon/aar.svg" alt=""/></a>
 <a href="Icon/aac.svg" download><img src="Icon/aac.svg" alt=""/></a>
+<a href="Icon/aad.svg" download><img src="Icon/aad.svg" alt=""/></a>
 <a href="Icon/aai.svg" download><img src="Icon/aai.svg" alt=""/></a>
 <a href="Icon/aab.svg" download><img src="Icon/aab.svg" alt=""/></a>
 <a href="Icon/aaa.svg" download><img src="Icon/aaa.svg" alt=""/></a>
