--- a/p_one.html
+++ b/p_one.html
@@ -19,7 +19,11 @@ a {text-decoration:none;}
 <body>
 <a href="index.html"><h1>Public Domain Scalable Vector Graphics</h1></a>
 <h2>Click to Download</h2>
-<a href="Icon/aba.svg" download><img src="Icon/aba.svg" alt="download"/></a>
+<a href="Icon/abm.svg" download><img src="Icon/abm.svg" alt="download"/></a>
+<a href="Icon/abj.svg" download><img src="Icon/abj.svg" alt=""/></a>
+<a href="Icon/aaj.svg" download><img src="Icon/aaj.svg" alt=""/></a>
+<a href="Icon/aat.svg" download><img src="Icon/aat.svg" alt=""/></a>
+<a href="Icon/aba.svg" download><img src="Icon/aba.svg" alt=""/></a>
 <a href="Icon/aas.svg" download><img src="Icon/aas.svg" alt=""/></a>
 <a href="Icon/aar.svg" download><img src="Icon/aar.svg" alt=""/></a>
 <a href="Icon/aac.svg" download><img src="Icon/aac.svg" alt=""/></a>
