--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@ a {text-decoration:none;}
 <h1>Public Domain Scalable Vector Graphics</h1>
 <a href="about.html"><h2>| About |</h2></a>
 <h2>Click to Download</h2>
-<a href="Icon/aaz.svg" download><img src="Icon/aaz.svg" alt="download"/></a>
+<a href="Icon/abl.svg" download><img src="Icon/abl.svg" alt="download"/></a>
+<a href="Icon/abh.svg" download><img src="Icon/abh.svg" alt=""/></a>
+<a href="Icon/abi.svg" download><img src="Icon/abi.svg" alt=""/></a>
+<a href="Icon/abk.svg" download><img src="Icon/abk.svg" alt=""/></a>
+<a href="Icon/aaz.svg" download><img src="Icon/aaz.svg" alt=""/></a>
 <a href="Icon/aay.svg" download><img src="Icon/aay.svg" alt=""/></a>
 <a href="Icon/aax.svg" download><img src="Icon/aax.svg" alt=""/></a>
 <a href="Icon/aaw.svg" download><img src="Icon/aaw.svg" alt=""/></a>
 <a href="Icon/aav.svg" download><img src="Icon/aav.svg" alt=""/></a>
 <a href="Icon/aau.svg" download><img src="Icon/aau.svg" alt=""/></a>
-<a href="Icon/aat.svg" download><img src="Icon/aat.svg" alt=""/></a>
 <a href="Icon/abg.svg" download><img src="Icon/abg.svg" alt=""/></a>
 <a href="Icon/abe.svg" download><img src="Icon/abe.svg" alt=""/></a>
 <a href="Icon/aao.svg" download><img src="Icon/aao.svg" alt=""/></a>
@@ -34,17 +37,14 @@ a {text-decoration:none;}
 <a href="Icon/aam.svg" download><img src="Icon/aam.svg" alt=""/></a>
 <a href="Icon/aal.svg" download><img src="Icon/aal.svg" alt=""/></a>
 <a href="Icon/aak.svg" download><img src="Icon/aak.svg" alt=""/></a>
-<a href="Icon/aaj.svg" download><img src="Icon/aaj.svg" alt=""/></a>
 <a href="Icon/abc.svg" download><img src="Icon/abc.svg" alt=""/></a>
 <a href="Icon/aah.svg" download><img src="Icon/aah.svg" alt=""/></a>
 <a href="Icon/aag.svg" download><img src="Icon/aag.svg" alt=""/></a>
 <a href="Icon/aaf.svg" download><img src="Icon/aaf.svg" alt=""/></a>
 <a href="Icon/aae.svg" download><img src="Icon/aae.svg" alt=""/></a>
-<a href="Icon/abi.svg" download><img src="Icon/abi.svg" alt=""/></a>
 <a href="Icon/abb.svg" download><img src="Icon/abb.svg" alt=""/></a>
 <a href="Icon/abd.svg" download><img src="Icon/abd.svg" alt=""/></a>
 <a href="Icon/abf.svg" download><img src="Icon/abf.svg" alt=""/></a>
-<a href="Icon/abh.svg" download><img src="Icon/abh.svg" alt=""/></a>
 <a href="p_one.html"><h3>| Next Page |</h3></a>
 <a href="p_color.html"><h3>| Color Reference |</h3></a>
 </body>
