--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@ h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospace
 h2 {color:#000;margin:8px;padding-bottom:1em;font-size:2em;}
 h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;font-size:2em;}
 p {color:#000;margin:0;font-family:Monospaced;text-align: justify;font-size:1.5em;}
-.link {text-decoration:none;}
+.link {text-decoration:none;font-size:1em;}
 a:link {color:#088;text-decoration:none;font-size:1.5em;}
 a:visited {color:#077;}
 a:hover {color: red;}
