--- a/p_color.html
+++ b/p_color.html
@@ -195,6 +195,13 @@ img.ll {background-color:#730;}
 img.lm {background-color:#830;}
 
 </style>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7798975670372068",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
 <a href="index.html"><h1>Public Domain Scalable Vector Graphics</h1></a>
