--- a/about.html
+++ b/about.html
@@ -20,6 +20,13 @@ a:visited {color:#077;}
 a:hover {color: red;}
 a:active {color:#099;}
 </style>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7798975670372068",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
 <a class="link" href="index.html"><h1>Public Domain Scalable Vector Graphics</h1></a>
