--- a/index.html
+++ b/index.html
@@ -6,26 +6,20 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <meta name="author" content="Public Domain"/>
 <meta name="description" content="public domain svg software"/>
-<meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor, hexadecimal, color, reference, github"/>
+<meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor, hexadecimal, color, reference, license, about, github"/>
 <style>
 body {font-family:Helvetica, Arial;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;}
 h2 {color:#000;margin:8px;}
 h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;font-size:2em;}
 img {margin:20px;}
+p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
 </style>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-7798975670372068",
-    enable_page_level_ads: true
-  });
-</script>
+
 </head>
 <body>
 <h1>Public Domain Scalable Vector Graphics</h1>
-<a href="about.html"><h2>| About |</h2></a>
 <h2>Click to Download</h2>
 <a href="Icon/abl.svg" download><img src="Icon/abl.svg" alt="download"/></a>
 <a href="Icon/abh.svg" download><img src="Icon/abh.svg" alt=""/></a>
@@ -54,5 +48,9 @@ a {text-decoration:none;}
 <a href="Icon/abd.svg" download><img src="Icon/abd.svg" alt=""/></a>
 <a href="p_one.html"><h3>| Next Page |</h3></a>
 <a href="p_color.html"><h3>| Color Reference |</h3></a>
+<h2>- About -</h2>
+<p>Public svg contains free public domain scalable vector graphics. Feel free to download any image/software that you want, just click to download. You can copy, modify, distribute and perform the work, even for commercial purposes, all without asking permission. You may use this software for any purpose like a website, app, or your own software. This software is provided as is, without warranty of any kind. In no event shall the authors or creators be liable for any claim, due to damages or other liability, arising from, out of, or in connection with the software.</p>
+<p>All files are in svg format, and are created using a text editor. If you need help picking a color, there is a hexadecimal color reference linked here. Visit us on Github, at publicsvg.github.io .</p>
+<a href="https://creativecommons.org/publicdomain/zero/1.0/"><h3>| Creative Commons Zero 1.0 License |</h3></a>
 </body>
 </html>
