--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ a {text-decoration:none;}
 <a href="p_color.html"><h3>| Color Reference |</h3></a>
 <h2>- About -</h2>
 <p>Public svg contains free public domain scalable vector graphics. Feel free to download any image/software that you want, just click to download. You can copy, modify, distribute and perform the work, even for commercial purposes, all without asking permission. You may use this software for any purpose like a website, app, or your own software. This software is provided as is, without warranty of any kind. In no event shall the authors or creators be liable for any claim, due to damages or other liability, arising from, out of, or in connection with the software.</p>
-<p>All files are in svg format, and are created using a text editor. If you need help picking a color, there is a hexadecimal color reference linked here. Visit us on Github, at publicsvg.github.io .</p>
+<p>All files are in svg format, and are created using a text editor. Most icons are only 100 by 100 pixels and are in black and white. If you need help picking a color, there is a hexadecimal color reference linked here. Visit us on Github, at publicsvg.github.io .</p>
 <a href="https://creativecommons.org/publicdomain/zero/1.0/"><h3>| Creative Commons Zero 1.0 License |</h3></a>
 </body>
 </html>
