--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@ img {margin:20px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
 </style>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7798975670372068",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
 <h1>Public Domain Scalable Vector Graphics</h1>
