--- a/index.html
+++ b/index.html
@@ -16,22 +16,15 @@ img {margin:20px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
 </style>
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-7798975670372068",
-    enable_page_level_ads: true
-  });
-</script>
 </head>
 <body>
 <h1>Public Domain Scalable Vector Graphics</h1>
 <h2>Click to Download</h2>
 <a href="Icon/abl.svg" download><img src="Icon/abl.svg" alt="download"/></a>
 <a href="Icon/abh.svg" download><img src="Icon/abh.svg" alt=""/></a>
-<a href="Icon/abn.svg" download><img src="Icon/abn.svg" alt=""/></a>
-<a href="Icon/abi.svg" download><img src="Icon/abi.svg" alt=""/></a>
+<a href="Icon/aap.svg" download><img src="Icon/aap.svg" alt=""/></a>
 <a href="Icon/abk.svg" download><img src="Icon/abk.svg" alt=""/></a>
+<a href="Icon/abi.svg" download><img src="Icon/abi.svg" alt=""/></a>
 <a href="Icon/aaz.svg" download><img src="Icon/aaz.svg" alt=""/></a>
 <a href="Icon/aay.svg" download><img src="Icon/aay.svg" alt=""/></a>
 <a href="Icon/aax.svg" download><img src="Icon/aax.svg" alt=""/></a>
@@ -53,11 +46,12 @@ a {text-decoration:none;}
 <a href="Icon/abb.svg" download><img src="Icon/abb.svg" alt=""/></a>
 <a href="Icon/abd.svg" download><img src="Icon/abd.svg" alt=""/></a>
 <a href="p_one.html"><h3>| Next Page |</h3></a>
-<a href="p_color.html"><h3>| Color Reference |</h3></a>
 <h2>- About -</h2>
+<p>This is a personal blog, where I share some extra svg files I have made. All files are in svg format, and are created using a text editor. Most icons are only 100 by 100 pixels and are in black and white. The source code of this SVG is valid 1.1. If you need help picking a color, there is a hexadecimal color reference linked here. Visit us on Github, at publicsvg.github.io .</p>
+<a href="p_color.html"><h3>| Color Reference |</h3></a>
 <p>Public svg contains free public domain scalable vector graphics. Feel free to download any image/software that you want, just click to download. You can copy, modify, distribute and perform the work, even for commercial purposes, all without asking permission. You may use this software for any purpose like a website, app, or your own software. We have released all rights to the images. This software is provided as is, without warranty of any kind. In no event shall the authors or creators be liable for any claim, due to damages or other liability, arising from, out of, or in connection with the software. We reserve the right to change this Policy at any time, in our sole discretion.</p>
-<p>This is my personal blog, where I share some extra svg files I have made. All files are in svg format, and are created using a text editor. Most icons are only 100 by 100 pixels and are in black and white. If you need help picking a color, there is a hexadecimal color reference linked here. The source code of this SVG is valid. Visit us on Github, at publicsvg.github.io .</p>
-<p>Our site does use cookies. Cookies are small files that are transferred to your computer's hard drive by your web browser, which enables your browser to capture and remember certain information. Cookies can be disabled in your browser if you choose. Our third-party analytics providers use cookies to record information about your activities on the Site and to “remember” you when you return to the Site.</p>
 <a href="https://creativecommons.org/publicdomain/zero/1.0/"><h3>| Creative Commons Zero 1.0 License |</h3></a>
+<p>Our site does use cookies. Cookies are small files that are transferred to your computer's hard drive by your web browser, which enables your browser to capture and remember certain information. Cookies can be disabled in your browser if you choose. Our third-party analytics providers use cookies to record information about your activities on the Site and to “remember” you when you return to the Site.</p>
+<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-svg11" alt="Valid SVG 1.1" height="31" width="88" /></a>
 </body>
 </html>
