--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@ a {text-decoration:none;}
 <a href="p_color.html"><h3>| Color Reference |</h3></a>
 <p>Public svg contains free public domain scalable vector graphics. Feel free to download any image/software that you want, just click to download. You can copy, modify, distribute and perform the work, even for commercial purposes, all without asking permission. You may use this software for any purpose like a website, app, or your own software. We have released all rights to the images. This software is provided as is, without warranty of any kind. In no event shall the authors or creators be liable for any claim, due to damages or other liability, arising from, out of, or in connection with the software. We reserve the right to change this Policy at any time, in our sole discretion.</p>
 <a href="https://creativecommons.org/publicdomain/zero/1.0/"><h3>| Creative Commons Zero 1.0 License |</h3></a>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="9QTM3JV9S34US">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
 <p>Our site does use cookies. Cookies are small files that are transferred to your computer's hard drive by your web browser, which enables your browser to capture and remember certain information. Cookies can be disabled in your browser if you choose. Our third-party analytics providers use cookies to record information about your activities on the Site and to “remember” you when you return to the Site.</p>
 <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-svg11" alt="Valid SVG 1.1" height="31" width="88" /></a>
 </body>
