--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospace
 img {margin:20px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
+form {padding-top:20px;margin:0;}
 </style>
 </head>
 <body>
@@ -58,6 +59,5 @@ a {text-decoration:none;}
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
-<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-svg11" alt="Valid SVG 1.1" height="31" width="88" /></a>
 </body>
 </html>
