--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospace
 img {margin:20px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
-form {padding-top:20px;margin:0;float:right;}
+form {padding-top:18px;margin:0;float:right;}
 </style>
 </head>
 <body>
@@ -23,7 +23,7 @@ form {padding-top:20px;margin:0;float:right;}
 <h2>Click to Download</h2>
 <a href="Icon/abl.svg" download><img src="Icon/abl.svg" alt="download"/></a>
 <a href="Icon/abh.svg" download><img src="Icon/abh.svg" alt=""/></a>
-<a href="Icon/aap.svg" download><img src="Icon/aap.svg" alt=""/></a>
+<a href="Icon/aaq.svg" download><img src="Icon/aaq.svg" alt=""/></a>
 <a href="Icon/abk.svg" download><img src="Icon/abk.svg" alt=""/></a>
 <a href="Icon/abi.svg" download><img src="Icon/abi.svg" alt=""/></a>
 <a href="Icon/aaz.svg" download><img src="Icon/aaz.svg" alt=""/></a>
@@ -48,7 +48,7 @@ form {padding-top:20px;margin:0;float:right;}
 <a href="Icon/abd.svg" download><img src="Icon/abd.svg" alt=""/></a>
 <a href="p_one.html"><h3>| Next Page |</h3></a>
 <h2>- About -</h2>
-<p>This is a personal blog, where I share some extra svg files I have made. All files are in svg format, and are created using a text editor. Most icons are only 100 by 100 pixels and are in black and white. The source code of this SVG is valid 1.1. If you need help picking a color, there is a hexadecimal color reference linked here. Visit us on Github, at publicsvg.github.io</p>
+<p>This is a personal blog, where I share some extra svg files I have made. All files are in svg format, and are created using a text editor. Most icons are only 100 by 100 pixels and are in black and white. The source code of this SVG is valid 1.1. If you need help picking a color, there is a hexadecimal color reference linked here. We now accept donations/tips via PayPal. Visit us on Github, at publicsvg.github.io</p>
 <a href="p_color.html"><h3>| Color Reference |</h3></a>
 <p>Public svg contains free public domain scalable vector graphics. Feel free to download any image/software that you want, just click to download. You can copy, modify, distribute and perform the work, even for commercial purposes, all without asking permission. You may use this software for any purpose like a website, app, or your own software. We have released all rights to the images. This software is provided as is, without warranty of any kind. In no event shall the authors or creators be liable for any claim, due to damages or other liability, arising from, out of, or in connection with the software. We reserve the right to change this Policy at any time, in our sole discretion.</p>
 <a href="https://creativecommons.org/publicdomain/zero/1.0/"><h3>| Creative Commons Zero 1.0 License |</h3></a>
