--- a/p_one.html
+++ b/p_one.html
@@ -21,13 +21,20 @@ a {text-decoration:none;}
 <h2>Click to Download</h2>
 <a href="Icon/abm.svg" download><img src="Icon/abm.svg" alt="download"/></a>
 <a href="Icon/abj.svg" download><img src="Icon/abj.svg" alt=""/></a>
-<a href="Icon/aaj.svg" download><img src="Icon/aaj.svg" alt=""/></a>
+<a href="Icon/aba.svg" download><img src="Icon/aba.svg" alt=""/></a>
+<a href="Icon/abo.svg" download><img src="Icon/abo.svg" alt=""/></a>
+<a href="Icon/abp.svg" download><img src="Icon/abp.svg" alt=""/></a>
+<a href="Icon/abq.svg" download><img src="Icon/abq.svg" alt=""/></a>
+<a href="Icon/abs.svg" download><img src="Icon/abs.svg" alt=""/></a>
 <a href="Icon/aap.svg" download><img src="Icon/aap.svg" alt=""/></a>
 <a href="Icon/abn.svg" download><img src="Icon/abn.svg" alt=""/></a>
+<a href="Icon/aaq.svg" download><img src="Icon/aaq.svg" alt=""/></a>
+<a href="Icon/aaj.svg" download><img src="Icon/aaj.svg" alt=""/></a>
 <a href="Icon/aat.svg" download><img src="Icon/aat.svg" alt=""/></a>
 <a href="Icon/aas.svg" download><img src="Icon/aas.svg" alt=""/></a>
 <a href="Icon/aar.svg" download><img src="Icon/aar.svg" alt=""/></a>
 <a href="Icon/abf.svg" download><img src="Icon/abf.svg" alt=""/></a>
+<a href="Icon/abr.svg" download><img src="Icon/abr.svg" alt=""/></a>
 <a href="Icon/aac.svg" download><img src="Icon/aac.svg" alt=""/></a>
 <a href="Icon/aad.svg" download><img src="Icon/aad.svg" alt=""/></a>
 <a href="Icon/aai.svg" download><img src="Icon/aai.svg" alt=""/></a>
