--- a/p_one.html
+++ b/p_one.html
@@ -21,10 +21,12 @@ a {text-decoration:none;}
 <h2>Click to Download</h2>
 <a href="Icon/abm.svg" download><img src="Icon/abm.svg" alt="download"/></a>
 <a href="Icon/abj.svg" download><img src="Icon/abj.svg" alt=""/></a>
+<a href="Icon/abv.svg" download><img src="Icon/abv.svg" alt=""/></a>
 <a href="Icon/aba.svg" download><img src="Icon/aba.svg" alt=""/></a>
 <a href="Icon/abo.svg" download><img src="Icon/abo.svg" alt=""/></a>
 <a href="Icon/abp.svg" download><img src="Icon/abp.svg" alt=""/></a>
 <a href="Icon/abq.svg" download><img src="Icon/abq.svg" alt=""/></a>
+<a href="Icon/abt.svg" download><img src="Icon/abt.svg" alt=""/></a>
 <a href="Icon/abs.svg" download><img src="Icon/abs.svg" alt=""/></a>
 <a href="Icon/aap.svg" download><img src="Icon/aap.svg" alt=""/></a>
 <a href="Icon/abn.svg" download><img src="Icon/abn.svg" alt=""/></a>
