--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ form {padding-top:18px;margin:0;float:right;}
 <a href="Icon/aax.svg" download><img src="Icon/aax.svg" alt=""/></a>
 <a href="Icon/abu.svg" download><img src="Icon/abu.svg" alt=""/></a>
 <a href="Icon/aaw.svg" download><img src="Icon/aaw.svg" alt=""/></a>
-<a href="Icon/aav.svg" download><img src="Icon/aav.svg" alt=""/></a>
-<a href="Icon/aau.svg" download><img src="Icon/aau.svg" alt=""/></a>
+<a href="Icon/abx.svg" download><img src="Icon/abx.svg" alt=""/></a>
+<a href="Icon/aby.svg" download><img src="Icon/aby.svg" alt=""/></a>
 <a href="Icon/abg.svg" download><img src="Icon/abg.svg" alt=""/></a>
 <a href="Icon/abe.svg" download><img src="Icon/abe.svg" alt=""/></a>
 <a href="Icon/aao.svg" download><img src="Icon/aao.svg" alt=""/></a>
