--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor, hexadecimal, color, reference, license, about, github"/>
 <style>
  @font-face {font-family:'Fira Code';src: url('FiraCode-Medium.ttf');}
-body {font-family:Fira Code;text-align:center;}
+body {font-family:Fira Code, Helvetica, Arial, Monospaced;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code;}
 h2 {color:#000;margin:8px;}
 h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code;font-size:2em;}
 img {margin:20px;}
-p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
+p {color:#000;margin:0;font-family:Fira Code;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
 form {padding-top:18px;margin:0;float:right;}
 </style>
