--- a/p_color.html
+++ b/p_color.html
@@ -8,10 +8,11 @@
 <meta name="description" content="public domain svg software"/>
 <meta name="keywords" content="svg, public, domain, software, color, colors, reference, list, hexadecimal, free, gratis, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor"/>
 <style>
-body {font-family:Helvetica, Arial;text-align:center;}
-h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;}
+ @font-face {font-family:'Fira Code';src: url('FiraCode-Medium.ttf');}
+body {font-family:Fira Code, Helvetica, Arial, Monospaced;text-align:center;}
+h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code;}
 h2 {color:#000;margin:8px;padding-bottom:2em;}
-h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Monospaced;font-size:2em;}
+h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code;font-size:2em;}
 img {margin:0px;}
 a {text-decoration:none;}
 p {font-family:Monospace;font-size:2em;margin:0px;}
