--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fir;}
 h2 {color:#000;margin:8px;}
 h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fir;font-size:2em;}
 img {margin:20px;}
-p {color:#000;margin:0;font-family:Fir;text-align:justify;font-size:1.5em;}
+p {color:#000;margin:0;font-family:Fira Code;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
 form {padding-top:18px;margin:0;float:right;}
 </style>
