--- a/p_color.html
+++ b/p_color.html
@@ -15,7 +15,7 @@ h2 {color:#000;margin:8px;padding-bottom:2em;}
 h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code;font-size:2em;}
 img {margin:0px;}
 a {text-decoration:none;}
-p {font-family:Monospace;font-size:2em;margin:0px;}
+p {font-family:Fira Code;font-size:2em;margin:0px;}
 
 img.aa {background-color:#000;}
 img.ab {background-color:#111;}
