--- a/p_one.html
+++ b/p_one.html
@@ -20,8 +20,7 @@ a {text-decoration:none;}
 <body>
 <a href="index.html"><h1>Public Domain Scalable Vector Graphics</h1></a>
 <h2>Click to Download</h2>
-<a href="Icon/abm.svg" download><img src="Icon/abm.svg" alt="download"/></a>
-<a href="Icon/abj.svg" download><img src="Icon/abj.svg" alt=""/></a>
+<a href="Icon/abj.svg" download><img src="Icon/abj.svg" alt="download"/></a>
 <a href="Icon/abw.svg" download><img src="Icon/abw.svg" alt=""/></a>
 <a href="Icon/abv.svg" download><img src="Icon/abv.svg" alt=""/></a>
 <a href="Icon/aba.svg" download><img src="Icon/aba.svg" alt=""/></a>
@@ -29,12 +28,10 @@ a {text-decoration:none;}
 <a href="Icon/abp.svg" download><img src="Icon/abp.svg" alt=""/></a>
 <a href="Icon/abq.svg" download><img src="Icon/abq.svg" alt=""/></a>
 <a href="Icon/abt.svg" download><img src="Icon/abt.svg" alt=""/></a>
-<a href="Icon/abs.svg" download><img src="Icon/abs.svg" alt=""/></a>
 <a href="Icon/aap.svg" download><img src="Icon/aap.svg" alt=""/></a>
 <a href="Icon/abn.svg" download><img src="Icon/abn.svg" alt=""/></a>
 <a href="Icon/aaq.svg" download><img src="Icon/aaq.svg" alt=""/></a>
 <a href="Icon/aaj.svg" download><img src="Icon/aaj.svg" alt=""/></a>
-
 <a href="Icon/aar.svg" download><img src="Icon/aar.svg" alt=""/></a>
 <a href="Icon/abf.svg" download><img src="Icon/abf.svg" alt=""/></a>
 <a href="Icon/abr.svg" download><img src="Icon/abr.svg" alt=""/></a>
