--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="keywords" content="svg, public, domain, software, download, image, icon, icons, free, gratis, click, dominio, publico, scalable, vector, graphics, design, small, mini, tiny, text, editor, hexadecimal, color, reference, license, about, github"/>
 <style>
  @font-face {font-family:'Fira Code';src: url('FiraCode-Medium.ttf');}
-body {font-family:Fira Code, Helvetica, Arial, Monospaced;text-align:center;}
+body {font-family:Helvetica, Arial;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code;}
 h2 {color:#000;margin:8px;}
 h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code;font-size:2em;}
