--- a/p_one.html
+++ b/p_one.html
@@ -40,6 +40,8 @@ a {text-decoration:none;}
 <a href="Icon/aai.svg" download><img src="Icon/aai.svg" alt=""/></a>
 <a href="Icon/aab.svg" download><img src="Icon/aab.svg" alt=""/></a>
 <a href="Icon/aaa.svg" download><img src="Icon/aaa.svg" alt=""/></a>
+<a href="Icon/aau.svg" download><img src="Icon/aau.svg" alt=""/></a>
+<a href="Icon/aav.svg" download><img src="Icon/aav.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
