--- a/p_one.html
+++ b/p_one.html
@@ -37,6 +37,7 @@ a {text-decoration:none;}
 <a href="Icon/abr.svg" download><img src="Icon/abr.svg" alt=""/></a>
 <a href="Icon/aac.svg" download><img src="Icon/aac.svg" alt=""/></a>
 <a href="Icon/aad.svg" download><img src="Icon/aad.svg" alt=""/></a>
+<a href="Icon/aaw.svg" download><img src="Icon/aaw.svg" alt=""/></a>
 <a href="Icon/aai.svg" download><img src="Icon/aai.svg" alt=""/></a>
 <a href="Icon/aab.svg" download><img src="Icon/aab.svg" alt=""/></a>
 <a href="Icon/aaa.svg" download><img src="Icon/aaa.svg" alt=""/></a>
@@ -44,6 +45,8 @@ a {text-decoration:none;}
 <a href="Icon/aav.svg" download><img src="Icon/aav.svg" alt=""/></a>
 <a href="Icon/aas.svg" download><img src="Icon/aas.svg" alt=""/></a>
 <a href="Icon/aat.svg" download><img src="Icon/aat.svg" alt=""/></a>
+<a href="Icon/abg.svg" download><img src="Icon/abg.svg" alt=""/></a>
+<a href="Icon/abz.svg" download><img src="Icon/abz.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
