--- a/p_one.html
+++ b/p_one.html
@@ -24,6 +24,7 @@ a {text-decoration:none;}
 <a href="Icon/abw.svg" download><img src="Icon/abw.svg" alt=""/></a>
 <a href="Icon/abv.svg" download><img src="Icon/abv.svg" alt=""/></a>
 <a href="Icon/aba.svg" download><img src="Icon/aba.svg" alt=""/></a>
+<a href="Icon/ace.svg" download><img src="Icon/ace.svg" alt=""/></a>
 <a href="Icon/abo.svg" download><img src="Icon/abo.svg" alt=""/></a>
 <a href="Icon/abp.svg" download><img src="Icon/abp.svg" alt=""/></a>
 <a href="Icon/abq.svg" download><img src="Icon/abq.svg" alt=""/></a>
@@ -33,6 +34,7 @@ a {text-decoration:none;}
 <a href="Icon/aaq.svg" download><img src="Icon/aaq.svg" alt=""/></a>
 <a href="Icon/aca.svg" download><img src="Icon/aca.svg" alt=""/></a>
 <a href="Icon/acb.svg" download><img src="Icon/acb.svg" alt=""/></a>
+<a href="Icon/acd.svg" download><img src="Icon/acd.svg" alt=""/></a>
 <a href="Icon/aaj.svg" download><img src="Icon/aaj.svg" alt=""/></a>
 <a href="Icon/aar.svg" download><img src="Icon/aar.svg" alt=""/></a>
 <a href="Icon/abf.svg" download><img src="Icon/abf.svg" alt=""/></a>
