--- a/p_one.html
+++ b/p_one.html
@@ -30,6 +30,7 @@ a {text-decoration:none;}
 <a href="Icon/abq.svg" download><img src="Icon/abq.svg" alt=""/></a>
 <a href="Icon/abt.svg" download><img src="Icon/abt.svg" alt=""/></a>
 <a href="Icon/aap.svg" download><img src="Icon/aap.svg" alt=""/></a>
+<a href="Icon/abx.svg" download><img src="Icon/abx.svg" alt=""/></a>
 <a href="Icon/abn.svg" download><img src="Icon/abn.svg" alt=""/></a>
 <a href="Icon/aaq.svg" download><img src="Icon/aaq.svg" alt=""/></a>
 <a href="Icon/aca.svg" download><img src="Icon/aca.svg" alt=""/></a>
@@ -52,6 +53,9 @@ a {text-decoration:none;}
 <a href="Icon/aat.svg" download><img src="Icon/aat.svg" alt=""/></a>
 <a href="Icon/abg.svg" download><img src="Icon/abg.svg" alt=""/></a>
 <a href="Icon/abz.svg" download><img src="Icon/abz.svg" alt=""/></a>
+<a href="Icon/acn.svg" download><img src="Icon/acn.svg" alt=""/></a>
+<a href="Icon/acp.svg" download><img src="Icon/acp.svg" alt=""/></a>
+<a href="Icon/acq.svg" download><img src="Icon/acq.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
