--- a/p_one.html
+++ b/p_one.html
@@ -56,6 +56,8 @@ a {text-decoration:none;}
 <a href="Icon/acn.svg" download><img src="Icon/acn.svg" alt=""/></a>
 <a href="Icon/acp.svg" download><img src="Icon/acp.svg" alt=""/></a>
 <a href="Icon/acq.svg" download><img src="Icon/acq.svg" alt=""/></a>
+<a href="Icon/acf.svg" download><img src="Icon/acf.svg" alt=""/></a>
+<a href="Icon/aah.svg" download><img src="Icon/aah.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
