--- a/p_one.html
+++ b/p_one.html
@@ -58,6 +58,7 @@ a {text-decoration:none;}
 <a href="Icon/acq.svg" download><img src="Icon/acq.svg" alt=""/></a>
 <a href="Icon/acf.svg" download><img src="Icon/acf.svg" alt=""/></a>
 <a href="Icon/aah.svg" download><img src="Icon/aah.svg" alt=""/></a>
+<a href="Icon/aby.svg" download><img src="Icon/aby.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
