--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code
 img {margin:20px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
-form {padding-top:18px;margin:0;float:right;}
+form {padding-top:18px;margin:0;float:left;}
 </style>
 </head>
 <body>
