--- a/p_one.html
+++ b/p_one.html
@@ -59,6 +59,8 @@ a {text-decoration:none;}
 <a href="Icon/acf.svg" download><img src="Icon/acf.svg" alt=""/></a>
 <a href="Icon/aah.svg" download><img src="Icon/aah.svg" alt=""/></a>
 <a href="Icon/aby.svg" download><img src="Icon/aby.svg" alt=""/></a>
+<a href="Icon/aci.svg" download><img src="Icon/aci.svg" alt=""/></a>
+<a href="Icon/acj.svg" download><img src="Icon/acj.svg" alt=""/></a>
 <!--<a href="p_two.html"><h3>| Next Page |</h3></a>-->
 <a href="index.html"><h3>| Back |</h3></a>
 </body>
