--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ body {font-family:Helvetica, Arial;text-align:center;}
 h1 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code;}
 h2 {color:#000;margin:8px;}
 h3 {background-color:#000;color:#fff;margin:0;padding:.5em;font-family:Fira Code;font-size:2em;}
-img {margin:20px;}
+img {margin:15px;}
 p {color:#000;margin:0;font-family:Monospaced;text-align:justify;font-size:1.5em;}
 a {text-decoration:none;}
-form {padding-top:18px;margin:0;float:left;}
+form {padding-top:18px;margin:0;padding-left:45%;}
 </style>
 </head>
 <body>
@@ -59,7 +59,8 @@ form {padding-top:18px;margin:0;float:left;}
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="9QTM3JV9S34US">
 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+<img border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
 </form>
+
 </body>
 </html>
